--- a/web_static/styles/103-header.css
+++ b/web_static/styles/103-header.css
@@ -1,18 +1,10 @@
-header {
+footer {
+	position: fixed;
+	bottom: 0;
 	background-color: white;
-	height: 70px;
+	height: 60px;
 	width: 100%;
-	
-	border-bottom: 1px solid #CCCCCC;
-}
-
-#header_logo {
-	height: 100%;
-	width: 142px;
-
-	background-image: url("../images/logo.png");
-	background-repeat: no-repeat;
-	background-position: center;
-
-	margin-left: 20px;
+	text-align: center;
+	line-height: 30px;
+	border-top: 1px solid #CCCCCC;
 }
